[gd_scene load_steps=2 format=2]

[ext_resource path="res://utils/DebugLayer.gd" type="Script" id=1]

[node name="DebugLayer" type="CanvasLayer"]
layer = 128
script = ExtResource( 1 )

[node name="DebugLayerContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -194.0

[node name="ColorRect" type="ColorRect" parent="DebugLayerContainer"]
margin_right = 194.0
margin_bottom = 240.0
color = Color( 0.388235, 0.0666667, 0.0666667, 0.698039 )

[node name="VBoxContainer" type="VBoxContainer" parent="DebugLayerContainer"]
margin_right = 194.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="DebugLayerContainer/VBoxContainer"]
margin_right = 194.0
margin_bottom = 14.0
text = "DEBUG"
align = 1

[node name="DebugMessages" type="VBoxContainer" parent="DebugLayerContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 194.0
margin_bottom = 33.0

[node name="DebugMessage" type="RichTextLabel" parent="DebugLayerContainer/VBoxContainer/DebugMessages"]
margin_right = 194.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "test *prova*"
text = "test *prova*"
fit_content_height = true
